Changed responsiveness, added code to Home,  fixed overflow in sideNav

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -24,7 +24,7 @@
     visibility: visible;
   }}
 
-@media screen and (max-width: 750px) and (max-height: 450px) {
+@media screen and (max-width: 750px) and (max-height: 640px) {
   .sideNavBlock {
     visibility: hidden;
     width: 0%;
