--- a/src/components/content/Home/home.css
+++ b/src/components/content/Home/home.css
@@ -6,7 +6,7 @@
   text-align: center;
   border: 2px solid #add8e6;
   border-radius: 25px;
-  margin: 50px;
+  /* margin: 50px; */
   margin-bottom: 25px;
 
   animation: fadeIn 8s;
